fix no margin-block on small viewport heights

--- a/styles/aboutus.module.css
+++ b/styles/aboutus.module.css
@@ -1,16 +1,11 @@
 .container {
   display: grid;
+  margin-block: 3.75rem;
   row-gap: 2rem;
   column-gap: 3rem;
   justify-content: center;
   align-content: center;
   grid-template-areas: 'heading heading' 'paras icons';
-}
-
-@media (max-width: 1200px) {
-  .container {
-    margin-block: 3.75rem;
-  }
 }
 
 @media (max-width: 1000px) {
